// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component - MoreOptions should render correctly & hide content 1`] = `
Array [
  <button
    className="button"
    onClick={[Function]}
  >
    <span
      className="icon"
    >
      <svg
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fill": "currentColor",
            "height": 24,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "width": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="label"
    >
      more options
    </span>
  </button>,
  <div
    className="content"
  >
    <span>
      Foo
    </span>
    <span>
      Bar
    </span>
    <span>
      Baz
    </span>
  </div>,
]
`;

exports[`Input component - MoreOptions should render correctly & show content 1`] = `
Array [
  <button
    className="button"
    onClick={[Function]}
  >
    <span
      className="icon"
    >
      <svg
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fill": "currentColor",
            "height": 24,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "width": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="label"
    >
      more options
    </span>
  </button>,
  <div
    className="content show"
  >
    <span>
      Foo
    </span>
    <span>
      Bar
    </span>
    <span>
      Baz
    </span>
  </div>,
]
`;
